# cloudops

./: README.md
cloudops-cli-v2/: README.md  config.example.yaml  pyproject.toml  requirements.txt
cloudops-cli-v2/cloudops/: cli.py  config.py  gui.py
cloudops-cli-v2/cloudops/modules/: backup_sync.py  cred_rotator.py  idle_audit.py  tag_enforcer.py  tfstate_auditor.py
cloudops-cli-v2/cloudops/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
cloudops-cli-v2/cloudops/utils/: notify.py  report.py
cloudops-cli-v2/cloudops_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
