[project]
name = "cloudops-cli"
version = "0.1.0"
description = "CLI unificada para auditoria de recursos ociosos, backup cruzado, rotação de credenciais, tagging enforcement e drift de Terraform, multi-cloud (AWS/GCP/Azure)."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "boto3>=1.34",
    "httpx>=0.27",
]

[project.optional-dependencies]
gcp = ["google-cloud-compute>=1.19", "google-cloud-resource-manager>=1.12"]
azure = ["azure-identity>=1.16", "azure-mgmt-compute>=31.0", "azure-mgmt-network>=25.4"]
all = ["cloudops-cli[gcp,azure]"]

[project.scripts]
cloudops = "cloudops.cli:main"
cloudops-gui = "cloudops.gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cloudops*"]
